# ACDA-Q

./: .env.example  .gitignore  ACDA-Quant_20260519_全链路修复记录.md  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-05-28.md  AUDIT_REPORT_2026-05-29.md  CLAUDE.md  Dockerfile.local  FIX_PLAN_2026-05-05.md  GITHUB_SETUP.md  ITERATION_PLAN.md  LICENSE  NEXT_STEPS.md  README.md  README_EN.md  RUST_MIGRATION_PLAN.md  RUST_MIGRATION_PROGRESS_2026-05-09.md  RUST_MIGRATION_PROGRESS_2026-05-14.md  STRATEGY_GUIDE.md  TECHNICAL_REVIEW_CURRENT.md  TECHNICAL_REVIEW_REPORT.md  TEST_ACCEPTANCE.md  deploy-new.sh  deploy-server.sh  deploy.sh  docker-compose.db-only.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.rust-only.yml  docker-compose.yml  fix-server-remote.sh  fix-server.py  package-lock.json  push-to-github.sh  requirements.txt  sandbox_runner.py  setup-github.sh  sync-to-server.sh
.github/workflows/: deploy.yml
client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
client/docs/: 回测性能优化修复记录_20260526.md
client/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src/components/: CodeEditor.tsx  EquityCurveChart.tsx  ErrorBoundary.tsx  KLineChart.tsx  Layout.tsx  PrivateRoute.tsx  SectionErrorBoundary.tsx  Skeleton.tsx  StockSelector.tsx  Toast.tsx
client/src/pages/: BacktestListPage.tsx  BacktestResultPage.tsx  DashboardPage.tsx  LoginPage.tsx  PrivacyPolicyPage.tsx  ProductInfoPage.tsx  SettingsPage.tsx  StrategyBacktestPage.tsx  StrategyEditorPage.tsx  StrategyListPage.tsx  SubscriptionPage.tsx
client/src/services/: aiGenerate.ts  api.ts
client/src/stores/: aiSettingsStore.ts  authStore.ts  backtestStore.ts  settingsStore.ts  strategyStore.ts  tokenStore.ts  web-compat.ts
client/src/utils/: fingerprint.ts
database/migrations/: 001_init.sql  002_market_data.sql  003_st_stock.sql  004_refresh_tokens.sql
database/migrations/timescale/: 001_market_data.sql
docs/: DEVELOPMENT_DOC.md
nginx/: nginx.conf  nginx.rust-only.conf
nginx/ssl/: README.md
reports/: 12b34d32-93a5-4606-b769-c791672082fd.json  37580c40-b841-4efe-874b-cd5734cd418d.json  6c5569fb-0b39-4b35-9e7f-fca2fb7f59e4.json  b65a2203-1097-4550-9a1b-f6d57b8690ee.json  b81cc58a-c223-4c66-983b-7e3b0c569092.json  ee4bf234-bb8a-4641-af04-127663f62eab.json
scripts/: fetch_data.py  fetch_data_tencent.py  fetch_hk_us.py  fetch_minute_data.py  run_import.sh  start-dev.sh
server-rust/: .env  Cargo.toml  Dockerfile  README.md  sandbox_runner.py
server-rust/benches/: backtest_bench.rs
server-rust/migrations/: 001_init.sql  002_market_data.sql  005_refresh_tokens_index.sql
server-rust/src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  queue.rs  queue.rs.bak2  sandbox.rs  websocket.rs
server-rust/src/ai/: deepseek.rs
server-rust/src/api/: admin.rs  ai.rs  auth.rs  backtest.rs  health.rs  market.rs  mod.rs  strategies.rs  subscription.rs
server-rust/src/backtest/: analyzer.rs  broker.rs  context.rs  datafeed.rs  engine.rs  mod.rs  scanner.rs  types.rs  validator.rs  worker.rs
server-rust/src/data/: market.rs  mod.rs  tushare.rs
server-rust/src/middleware/: auth.rs  rate_limit.rs
server-rust/src/sandbox/: executor.rs  isolation.rs  resource.rs
server/ai/generators/: params_extractor.py
server/alembic/: env.py
server/api/: dependencies.py  main.py
server/api/core/: alerting.py  config.py
server/api/models/: models.py
server/api/routers/: admin.py  (+3 more)
server/worker/: celery_app.py  tasks.py
项目废弃的python/: pytest.ini  requirements.txt
项目废弃的python/server/: .env.example  Dockerfile  requirements.txt  setup.sh
项目废弃的python/tests/: pytest.ini  test_backtest_engine.py
(+36 files in other folders)
