[package]
name = "acda-q"
version = "0.1.0"
edition = "2021"
authors = ["ACDA-Q Team"]
description = "A-share quantitative backtest engine in Rust"

[lib]
name = "acda_q"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 核心
rust_decimal = { version = "1.33", features = ["serde", "maths"] }
rust_decimal_macros = "1.33"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"

# 异步运行时 (后续 API 服务用)
tokio = { version = "1.35", features = ["full"], optional = true }

# PyO3 (Python 绑定)
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

# 数据库 (后续接入)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"], optional = true }

# 日志
tracing = "0.1"

[features]
default = ["pyo3-binding"]
pyo3-binding = ["pyo3"]
api-server = ["tokio", "sqlx"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "backtest_bench"
harness = false
