[package]
name = "acda-q"
version = "0.1.0"
edition = "2021"
authors = ["ACDA-Q Team"]
description = "A-share quantitative backtest engine and API service in Rust"
rust-version = "1.75"

[[bin]]
name = "acda-q-server"
path = "src/main.rs"

[lib]
name = "acda_q"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
rust_decimal = { version = "1.35", features = ["serde", "maths", "std", "db-postgres"] }
rust_decimal_macros = "1.35"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1.3", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "migrate", "rust_decimal"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# HTTP client (for data sync)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# ID generation
uuid = { version = "1.8", features = ["v4", "serde"] }

# Password generation (for API keys)
rand_core = "0.6"
base64 = "0.22"

# Async traits
async-trait = "0.1"

# Streaming / WebSocket
futures = "0.3"

# PyO3 (Python interop, optional)
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

# Other
itertools = "0.12"
sha2 = "0.10"
hex = "0.4"

[features]
default = []
api-server = []
pyo3-binding = ["pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "backtest_bench"
harness = false
